--- a/APIDatVe/HeThongQuanLyDatVe/Views/QuanLyTaiKhoan/DanhSachTaiKhoan.cshtml
+++ b/APIDatVe/HeThongQuanLyDatVe/Views/QuanLyTaiKhoan/DanhSachTaiKhoan.cshtml
@@ -135,6 +135,17 @@
                         </div>
                         <div class="col-md-12 margin-md-bottom">
                             <div class="form-group">
+                                <label class="control-label no-padding-right">Giới tính</label>
+                                <div>
+                                    <select ng-model="detail.gioitinh" class="col-xs-12">
+                                        <option value="Nam">Nam</option>
+                                        <option value="Nữ">Nữ</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-12 margin-md-bottom">
+                            <div class="form-group">
                                 <label class="control-label no-padding-right">Email</label>
                                 <div>
                                     <input type="text" ng-model="detail.email" class="col-xs-12" />
