--- a/APIDatVe/HeThongQuanLyDatVe/Views/Shared/_Layout.cshtml
+++ b/APIDatVe/HeThongQuanLyDatVe/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
                         </a>
                         <ul class="user-menu dropdown-menu-right dropdown-menu dropdown-yellow dropdown-caret dropdown-close">
                             <li>
-                                <a href="profile.html">
+                                <a href="/QuanLyTaiKhoan/ThongTinTaiKhoan">
                                     <i class="ace-icon fa fa-user"></i>
                                     Thông tin tài khoản
                                 </a>
