--- a/APIDatVe/HeThongQuanLyDatVe/Views/QuanLyNhanVien/DanhSachNhanVien.cshtml
+++ b/APIDatVe/HeThongQuanLyDatVe/Views/QuanLyNhanVien/DanhSachNhanVien.cshtml
@@ -147,6 +147,17 @@
                                 </div>
                                 <div class="col-md-6 margin-md-bottom">
                                     <div class="form-group">
+                                        <label class="control-label no-padding-right">Giới tính</label>
+                                        <div>
+                                            <select ng-model="detail.gioitinh" class="col-xs-12">
+                                                <option value="Nam">Nam</option>
+                                                <option value="Nữ">Nữ</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 margin-md-bottom">
+                                    <div class="form-group">
                                         <label class="control-label no-padding-right">Số điện thoại</label>
                                         <div>
                                             <input type="text" ng-model="detail.sodienthoai" class="col-xs-12" />
