--- a/APIDatVe/HeThongQuanLyDatVe/Views/Setting/SettingStyle.cshtml
+++ b/APIDatVe/HeThongQuanLyDatVe/Views/Setting/SettingStyle.cshtml
@@ -45,14 +45,17 @@
             .no-skin .nav-list > li.active:after {
                 border: 2px solid #0ba926 !important;
             }
+
             .btn-primary, .btn-primary.focus, .btn-primary:focus {
                 background-color: #0BA926 !important;
                 border-color: #0BA926;
             }
+
                 .btn-primary.focus:hover, .btn-primary:active:hover, .btn-primary:focus:active, .btn-primary:focus:hover, .btn-primary:hover, .open > .btn-primary.dropdown-toggle, .open > .btn-primary.dropdown-toggle.focus, .open > .btn-primary.dropdown-toggle:active, .open > .btn-primary.dropdown-toggle:focus, .open > .btn-primary.dropdown-toggle:hover {
                     background-color: #18b733 !important;
                     border-color: #18b733 !important;
                 }
+
             .widget-header {
                 color: #18b733 !important;
             }
@@ -60,8 +63,74 @@
             .steps > li.active .step, .steps > li.active:before, .steps > li.complete .step, .steps > li.complete:before {
                 border-color: #18b733 !important;
             }
+
             .blue {
                 color: #0c5c1a !important;
+            }
+        </style>
+    </div>
+    <div ng-if="typestyle == 2">
+        <style>
+            .table-header {
+                background-color: #438EB9 !important;
+            }
+
+            .navbar {
+                background: #62A8D1 !important;
+            }
+
+            .ace-nav > li.light-blue > a {
+                background-color: #438EB9 !important;
+            }
+
+                .ace-nav > li.light-blue > a:focus, .ace-nav > li.light-blue > a:hover, .ace-nav > li.open.light-blue > a {
+                    background-color: #438EB9 !IMPORTANT;
+                }
+
+            .page-header h1 {
+                color: #438EB9 !important;
+            }
+
+            .no-skin .nav-list > li.active > a {
+                color: #438EB9 !important;
+            }
+
+            .no-skin .nav-list > li.open > a {
+                color: #438EB9 !important;
+            }
+
+            .no-skin .nav-list > li > .submenu li.open > a, .no-skin .nav-list > li > .submenu li > .submenu li.active > a, .no-skin .nav-list > li > .submenu li > .submenu li.open > a {
+                color: #438EB9 !important;
+            }
+
+            .no-skin .nav-list li.active > a:after {
+                border-right-color: #438EB9 !important;
+            }
+
+            .no-skin .nav-list > li.active:after {
+                border: 2px solid #438EB9 !important;
+            }
+
+            .btn-primary, .btn-primary.focus, .btn-primary:focus {
+                background-color: #438EB9 !important;
+                border-color: #438EB9;
+            }
+
+                .btn-primary.focus:hover, .btn-primary:active:hover, .btn-primary:focus:active, .btn-primary:focus:hover, .btn-primary:hover, .open > .btn-primary.dropdown-toggle, .open > .btn-primary.dropdown-toggle.focus, .open > .btn-primary.dropdown-toggle:active, .open > .btn-primary.dropdown-toggle:focus, .open > .btn-primary.dropdown-toggle:hover {
+                    background-color: #438EB9 !important;
+                    border-color: #438EB9 !important;
+                }
+
+            .widget-header {
+                color: #438EB9 !important;
+            }
+
+            .steps > li.active .step, .steps > li.active:before, .steps > li.complete .step, .steps > li.complete:before {
+                border-color: #438EB9 !important;
+            }
+
+            .blue {
+                color: #438EB9 !important;
             }
         </style>
     </div>
