--- a/APIDatVe/HeThongQuanLyDatVe/Views/Shared/Error.cshtml
+++ b/APIDatVe/HeThongQuanLyDatVe/Views/Shared/Error.cshtml
@@ -2,12 +2,11 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Error</title>
+    <title>Trang lỗi</title>
 </head>
 <body>
     <hgroup>
-        <h1>Error.</h1>
-        <h2>An error occurred while processing your request.</h2>
+        <h1>Không thể hiển thị trang này</h1>
     </hgroup>
 </body>
 </html>
