--- a/APIDatVe/HeThongQuanLyDatVe/Views/Shared/_Layout.cshtml
+++ b/APIDatVe/HeThongQuanLyDatVe/Views/Shared/_Layout.cshtml
@@ -31,67 +31,71 @@
 </head>
 @if (settingstyle == 1)
 {
-<div>
-    <style>
-        .table-header {
-            background-color: #1abd36 !important;
-        }
-
-        .navbar {
-            background: #18b733 !important;
-        }
-
-        .ace-nav > li.light-blue > a {
-            background-color: #18b733 !important;
-        }
-
-            .ace-nav > li.light-blue > a:focus, .ace-nav > li.light-blue > a:hover, .ace-nav > li.open.light-blue > a {
-                background-color: #1c9430 !IMPORTANT;
+    <div>
+        <style>
+            .table-header {
+                background-color: #1abd36 !important;
             }
 
-        .page-header h1 {
-            color: #0ba926 !important;
-        }
+            .navbar {
+                background: #18b733 !important;
+            }
 
-        .no-skin .nav-list > li.active > a {
-            color: #0ba926 !important;
-        }
-
-        .no-skin .nav-list > li.open > a {
-            color: #0ba926 !important;
-        }
-
-        .no-skin .nav-list > li > .submenu li.open > a, .no-skin .nav-list > li > .submenu li > .submenu li.active > a, .no-skin .nav-list > li > .submenu li > .submenu li.open > a {
-            color: #0ba926 !important;
-        }
-
-        .no-skin .nav-list li.active > a:after {
-            border-right-color: #0ba926 !important;
-        }
-
-        .no-skin .nav-list > li.active:after {
-            border: 2px solid #0ba926 !important;
-        }
-
-        .btn-primary, .btn-primary.focus, .btn-primary:focus {
-            background-color: #0BA926 !important;
-            border-color: #0BA926;
-        }
-            .btn-primary.focus:hover, .btn-primary:active:hover, .btn-primary:focus:active, .btn-primary:focus:hover, .btn-primary:hover, .open > .btn-primary.dropdown-toggle, .open > .btn-primary.dropdown-toggle.focus, .open > .btn-primary.dropdown-toggle:active, .open > .btn-primary.dropdown-toggle:focus, .open > .btn-primary.dropdown-toggle:hover {
+            .ace-nav > li.light-blue > a {
                 background-color: #18b733 !important;
+            }
+
+                .ace-nav > li.light-blue > a:focus, .ace-nav > li.light-blue > a:hover, .ace-nav > li.open.light-blue > a {
+                    background-color: #1c9430 !IMPORTANT;
+                }
+
+            .page-header h1 {
+                color: #0ba926 !important;
+            }
+
+            .no-skin .nav-list > li.active > a {
+                color: #0ba926 !important;
+            }
+
+            .no-skin .nav-list > li.open > a {
+                color: #0ba926 !important;
+            }
+
+            .no-skin .nav-list > li > .submenu li.open > a, .no-skin .nav-list > li > .submenu li > .submenu li.active > a, .no-skin .nav-list > li > .submenu li > .submenu li.open > a {
+                color: #0ba926 !important;
+            }
+
+            .no-skin .nav-list li.active > a:after {
+                border-right-color: #0ba926 !important;
+            }
+
+            .no-skin .nav-list > li.active:after {
+                border: 2px solid #0ba926 !important;
+            }
+
+            .btn-primary, .btn-primary.focus, .btn-primary:focus {
+                background-color: #0BA926 !important;
+                border-color: #0BA926;
+            }
+
+                .btn-primary.focus:hover, .btn-primary:active:hover, .btn-primary:focus:active, .btn-primary:focus:hover, .btn-primary:hover, .open > .btn-primary.dropdown-toggle, .open > .btn-primary.dropdown-toggle.focus, .open > .btn-primary.dropdown-toggle:active, .open > .btn-primary.dropdown-toggle:focus, .open > .btn-primary.dropdown-toggle:hover {
+                    background-color: #18b733 !important;
+                    border-color: #18b733 !important;
+                }
+
+            .widget-header {
+                color: #18b733 !important;
+            }
+
+            .steps > li.active .step, .steps > li.active:before, .steps > li.complete .step, .steps > li.complete:before {
                 border-color: #18b733 !important;
             }
-        .widget-header {
-            color: #18b733 !important;
-        }
-        .steps > li.active .step, .steps > li.active:before, .steps > li.complete .step, .steps > li.complete:before {
-            border-color: #18b733 !important;
-        }
-        .blue {
-            color: #0c5c1a !important;
-        }
-    </style>
-</div>
+
+            .blue {
+                color: #0c5c1a !important;
+            }
+        </style>
+    </div>
 }
 <body class="no-skin" ng-app="app">
     <div id="navbar" class="navbar navbar-default ace-save-state">
@@ -351,6 +355,28 @@
                         }
                     </ul>
                 </li>
+                @if (acceptScreen.Any(x => x == "DanhSachTaiKhoan"))
+                {
+                    <li class="open">
+                        <a href="#" class="dropdown-toggle">
+                            <i class="menu-icon fa fa-bar-chart"></i>
+                            <span class="menu-text">
+                                Thống kê
+                            </span>
+                            <b class="arrow fa fa-angle-down"></b>
+                        </a>
+                        <b class="arrow"></b>
+                        <ul class="submenu">
+                            <li class="open">
+                                <a href="/ThongKe/ThongKeDatXe">
+                                    <i class="menu-icon fa fa-caret-right"></i>
+                                    Thống kê đặt vé
+                                </a>
+                                <b class="arrow"></b>
+                            </li>
+                        </ul>
+                    </li>
+                }
 
                 <li class="open">
                     <a href="#" class="dropdown-toggle">
